--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node -r esm server.js",
-    "dev": "nodemon -r esm server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "esm": "^3.2.25",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.16.0",
